--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -672,6 +672,7 @@ input[type="number"]::-webkit-outer-spin-button {
 	transform: translate(-50%, -50%);
 	width: 240px;
 	transition: all 0.4s ease-in-out;
+	z-index: 9;
 }
 
 .logo .isStickyLogo {
@@ -1881,15 +1882,9 @@ input[type="number"]::-webkit-outer-spin-button {
 	color: #fff;
 }
 
-.innerBannerWrapper {
-	padding: 190px 0 100px;
-}
 
-.innerBannerWrapper .container {
-	max-width: 1350px;
-}
 
-.innerBannerWrapper .innerBannerData {
+.serviceBannerWrapper .innerBannerData {
 	max-width: 870px;
 	margin: 0 auto;
 }
@@ -2872,4 +2867,383 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .bannerSlidePic {
 	height: 100%;
+}
+
+.serviceBannerMedia {
+	height: 850px;
+	min-height: 850px;
+}
+
+.serviceBannerMedia img {
+	width: 100%;
+	height: 100%;
+	-o-object-fit: cover;
+	object-fit: cover;
+	-o-object-position: center;
+	object-position: center;
+}
+
+.our-work-process-wrapper {
+	background-color: #202020;
+	position: relative;
+}
+
+.our-work-process-wrapper::before {
+	content: "";
+	position: absolute;
+	top: 30px;
+	right: 20px;
+	background-image: url(../images/watermark.png);
+	width: 400px;
+	height: 300px;
+	background-repeat: no-repeat;
+}
+
+.our-work-process-wrapper .section-heading {
+	margin: 0 auto 50px;
+}
+
+.our-work-process-wrapper .section-heading * {
+	color: var(--color-white);
+}
+
+.our-work-process-wrapper .section-heading p {
+	max-width: 560px;
+	margin: 0 auto;
+}
+
+.our-work-process-wrapper .tabCumAccordian {
+	display: flex;
+	margin: 0 -15px;
+	flex-direction: row-reverse;
+}
+
+.our-work-process-wrapper .tabCumAccordian>div {
+	padding: 0 15px;
+	width: 50%;
+}
+
+.our-work-process-wrapper .tabCumAccordian .tabNav ul {
+	padding-left: 60px;
+	padding-right: 60px;
+}
+
+.our-work-process-wrapper .tabCumAccordian .tabNav ul li {
+	margin-bottom: 35px;
+	position: relative;
+	padding-left: 105px;
+	cursor: pointer;
+	counter-increment: step-counter;
+}
+
+.our-work-process-wrapper .tabCumAccordian .tabNav ul li:last-child {
+	margin-bottom: 0;
+}
+
+.our-work-process-wrapper .tabCumAccordian .tabNav ul li::before {
+	content: counter(step-counter);
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 70px;
+	height: 70px;
+	border-radius: 100%;
+	border: 1px solid var(--color-white);
+	color: var(--color-white);
+	font-size: 30px;
+	line-height: 1;
+	z-index: 1;
+	transition: all 0.4s ease-in-out;
+}
+
+.our-work-process-wrapper .tabCumAccordian .tabNav ul li.active::before {
+	background-color: var(--primary-color);
+	border-color: var(--primary-color);
+	color: var(--color-white);
+}
+
+.our-work-process-wrapper .tabCumAccordian .tabNav ul li::after {
+	content: "";
+	position: absolute;
+	bottom: 100%;
+	left: 35px;
+	height: 100%;
+	border-left: 1px dashed #818080;
+}
+
+.our-work-process-wrapper .tabCumAccordian .tabNav ul li:first-child::after {
+	display: none;
+}
+
+.tabCumAccordian .tabTitleHead {
+	padding: 15px 50px 15px 15px;
+	font-weight: 600;
+	font-size: 18px;
+	line-height: 26px;
+	color: var(--color-white);
+	transition: 0.3s;
+	position: relative;
+	z-index: 0;
+	cursor: pointer;
+	display: none;
+}
+
+.our-work-process-wrapper .tabCumAccordian .tabNav .title-outer h3 {
+	font-family: var(--heading-font);
+	font-size: 31px;
+	font-weight: 400;
+	line-height: 1.4;
+	margin-bottom: 5px;
+	color: var(--color-white);
+}
+
+.our-work-process-wrapper .tabCumAccordian .tabNav .title-outer p {
+	color: var(--color-white);
+}
+
+.serviceBannerWrapper .banner-content-outer h1,
+.serviceBannerWrapper .banner-content-outer p {
+	max-width: 1150px;
+}
+
+.serviceBannerWrapper .banner-content-outer p {
+	font-size: 36px;
+}
+
+.workTranformationWrapper {
+	background-color: #202020;
+	padding: 80px 0;
+	position: relative;
+}
+
+.workTranformationMedia {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	width: 50%;
+}
+
+.workTranformationMedia img {
+	width: 100%;
+	height: 100%;
+	-o-object-fit: cover;
+	object-fit: cover;
+}
+
+.workTranformationWrapper::before {
+	content: "";
+	position: absolute;
+	top: 30px;
+	left: 20px;
+	background-image: url(../images/watermark.png);
+	width: 400px;
+	height: 300px;
+	background-repeat: no-repeat;
+}
+
+.workTranformationWrapper .container {
+	position: relative;
+	z-index: 2;
+}
+
+.workTranformationWrapper .section-heading {
+	max-width: 590px;
+}
+
+.workTranformationWrapper .section-heading * {
+	color: var(--color-white);
+}
+
+
+.workSatisfactionWrapper {
+	padding: 80px 0;
+	position: relative;
+}
+
+.workSatisfactionMedia {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	width: 50%;
+}
+
+.workSatisfactionMedia img {
+	width: 100%;
+	height: 100%;
+	-o-object-fit: cover;
+	object-fit: cover;
+}
+
+
+.workSatisfactionWrapper .container {
+	position: relative;
+	z-index: 2;
+}
+
+.workSatisfactionWrapper .section-heading {
+	max-width: 570px;
+	margin-left: auto;
+}
+
+.workSatisfactionWrapper .section-heading h3 {
+	font-size: 43px;
+	font-weight: 400;
+	line-height: 1.4;
+	color: #343332;
+	text-transform: capitalize;
+	margin-bottom: 20px;
+}
+
+.serviceGalleryWrapper .section-heading {
+	max-width: 970px;
+	margin: 0 auto 50px;
+}
+
+.serviceGalleryWrapper {
+	background-color: #F6F6F6;
+}
+
+.serviceGalleryCard {
+	max-width: 1215px;
+	margin: 0 auto;
+	min-height: 680px;
+	height: 680px;
+}
+
+.serviceGalleryCard img {
+	width: 100%;
+	height: 100%;
+	-o-object-fit: cover;
+	object-fit: cover;
+	-o-object-position: center;
+	object-position: center;
+	position: relative;
+	overflow: hidden;
+	border-radius: 15px;
+}
+
+.serviceGallerySliderOuter .swiper-pagination {
+	position: static;
+	margin-top: 35px;
+}
+
+.serviceGallerySliderOuter .swiper-pagination-bullet:not(.swiper-pagination-bullet-active) {
+	background-color: #E2E2E2;
+}
+
+.serviceProjectWrapper .section-heading {
+	margin-bottom: 50px;
+}
+
+.serviceProjectCard .media {
+	display: flex;
+	gap: 0 15px;
+}
+
+.serviceProjectCard .media figure {
+	height: 450px;
+	min-height: 450px;
+	position: relative;
+}
+
+.serviceProjectCard .media figure::before {
+	position: absolute;
+	bottom: 20px;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 90px;
+	height: 25px;
+	background-color: var(--color-white);
+	border-radius: 30px;
+	color: #000;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 1.2;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.serviceProjectCard .media figure:first-child::before {
+	content: "Before";
+}
+
+.serviceProjectCard .media figure:last-child::before {
+	content: "After";
+}
+
+.serviceProjectCard .media img {
+	width: 100%;
+	height: 100%;
+	-o-object-fit: cover;
+	object-fit: cover;
+	-o-object-position: center;
+	object-position: center;
+}
+
+.serviceProjectCard .data {
+	padding-bottom: 25px;
+	margin-bottom: 20px;
+	margin-top: 15px;
+	border-bottom: 1px solid #313131;
+}
+
+.serviceProjectCard .data h3 {
+	color: #000000;
+	margin-bottom: 8px;
+}
+
+.serviceProjectCard .data p {
+	color: var(--color-black);
+}
+
+.innerBannerMedia {
+	height: 650px;
+	min-height: 650px;
+}
+
+.innerBannerMedia img {
+	width: 100%;
+	height: 100%;
+	-o-object-fit: cover;
+	object-fit: cover;
+	-o-object-position: center;
+	object-position: center;
+}
+
+.aboutWelcomeWrapper {
+	background-color: #202020;
+	position: relative;
+}
+
+.aboutWelcomeWrapper::before {
+	content: "";
+	position: absolute;
+	top: 30px;
+	left: 20px;
+	background-image: url(../images/watermark.png);
+	width: 400px;
+	height: 300px;
+	background-repeat: no-repeat;
+}
+
+.aboutWelcomeWrapper .section-heading * {
+	color: var(--color-white);
+}
+
+.ourStoryWrapper {
+	padding-bottom: 0;
+}
+
+.ourStoryWrapper .section-heading {
+	max-width: 660px;
+}
+
+.ourStoryWrapper .section-heading h2 {
+	font-size: 50px;
 }
