--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1455,6 +1455,7 @@ input[type="number"]::-webkit-outer-spin-button {
   font-size: 13px;
   color: #dc3232 !important;
   text-align: left;
+  width: 100%;
 }
 
 .wpcf7 form.invalid .wpcf7-response-output,
@@ -2715,6 +2716,7 @@ input[type="number"]::-webkit-outer-spin-button {
   margin-bottom: 25px;
   border-bottom: 1px solid #e7e7e7;
   gap: 0 50px;
+  flex-wrap: wrap;
 }
 
 .newContactFormOuter .formTop .formRow::last-child {
@@ -2787,9 +2789,9 @@ input[type="number"]::-webkit-outer-spin-button {
   font-size: 20px;
   font-weight: 900;
   position: absolute;
-  top: 15px;
+  top: -5px;
   left: 50%;
-  transform: translate(-50%, 0);
+  transform: translateX(-50%);
   background-color: var(--color-white);
   border-radius: 100%;
   display: flex;
@@ -2858,7 +2860,9 @@ input[type="number"]::-webkit-outer-spin-button {
   height: 62px;
   overflow: visible;
 }
-
+.newContactFormOuter .submit-field p {
+  height: 100%;
+}
 .newContactFormOuter .btn {
   height: 100%;
   font-size: 17px;
@@ -3438,4 +3442,37 @@ input[type="number"]::-webkit-outer-spin-button {
   z-index: 10;
   transform: translate(0px, -19px);
   font-size: 20px;
+}
+.formSelectionField .customRadioCheck .wpcf7-list-item {
+  margin: 0;
+  padding-top: 28px;
+}
+.formSelectionField .customRadioCheck .wpcf7-list-item-label {
+  font-size: 16px;
+  line-height: 1.3;
+  display: block;
+}
+.formSelectionField .customRadioCheck input[type="radio"]:checked + span {
+  color: var(--color-white);
+}
+.formSelectionField .wpcf7-not-valid-tip {
+  display: none !important;
+}
+.getInTouchWrapper .wpcf7-form .wpcf7-not-valid-tip {
+  display: none;
+}
+.getInTouchWrapper .wpcf7-form.invalid .wpcf7-not-valid-tip {
+  display: block;
+}
+.getInTouchWrapper
+  .wpcf7-form.invalid
+  .wpcf7-not-valid-tip
+  + .wpcf7-not-valid-tip {
+  display: none;
+}
+.getInTouchWrapper .wpcf7-form.invalid .formRow.isValid .wpcf7-not-valid-tip {
+  display: none;
+}
+.getInTouchWrapper .textAreaField .wpcf7-not-valid-tip {
+  display: none !important;
 }
